tarification version finale

--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -363,7 +363,7 @@
               <h2>TARIFICATION DES PLACES DE PARKING</h2>
               <span class="title-line"><i class="fa fa-car"></i></span>
               <p>Des prix en fonction des lieux et dégréssifs sur le temps.<br>
-                Les chiffres ci-dessous sont donnés à titre indicatif.
+                Les prix ci-dessous sont fixés par les propriétaires, ils sont donnés à titre indicatif.
               </p>
             </div>
           </div>
@@ -377,18 +377,18 @@
             <div class="single-pricing-table">
               <h3>TARIF HORAIRE</h3>
                 <br>
-              <h5>À PARTIR DE 2,40€</h5>
+              <h5>À PARTIR DE 1,50€</h5>
 
 
 
               <ul class="package-list">
 
-                <li>   <a href="#" >CHAMPS-ÉLYSÉES - 4,99€</a> </li>
+                <li>   <a href="#" >CHAMPS-ÉLYSÉES - 3,20€</a> </li>
                 <li>  <a href="#"> LA DÉFENSE - 3,99€</a> </li>
-                <li>    <a href="#">INVALIDES - 4,99€</a> </li>
-                <li>    <a href="#">MUSÉE D'ORSAY - 4,99€</a> </li>
-                <li>    <a href="#">GARE DU NORD - 2,99€</a> </li>
-                <li>    <a href="#">BASTILLE - 3,50€</a> </li>
+                <li>    <a href="#">INVALIDES - 2,80€</a> </li>
+                <li>    <a href="#">MUSÉE D'ORSAY - 3,00€</a> </li>
+                <li>    <a href="#">GARE DU NORD - 2,90€</a> </li>
+                <li>    <a href="#">BASTILLE - 2,60€</a> </li>
 
               </ul>
             </div>
@@ -400,17 +400,17 @@
             <div class="single-pricing-table">
               <h3>TARIF JOURNALIER</h3>
                 <br>
-              <h5>À PARTIR DE 20,90€</h5>
+              <h5>À PARTIR DE 15,00€</h5>
 
               <ul class="package-list">
 
 
-                <li>   <a href="#" >SAINT-AMBROISE - 30,90€</a> </li>
-                <li>  <a href="#">MARAIS - 35,99€</a> </li>
-                <li>    <a href="#">LA VILETTE - 36,99€</a> </li>
-                <li>    <a href="#">MONTPARNASSE - 25,90€</a> </li>
-                <li>    <a href="#">GARE DE LYON - 25,99€</a> </li>
-                <li>    <a href="#">RÉPUBLIQUE - 23,90€</a> </li>
+                <li>   <a href="#" >SAINT-AMBROISE - 25,90€</a> </li>
+                <li>  <a href="#">MARAIS - 24,20€</a> </li>
+                <li>    <a href="#">LA VILETTE - 15,00€</a> </li>
+                <li>    <a href="#">MONTPARNASSE - 17,90€</a> </li>
+                <li>    <a href="#">GARE DE LYON - 21,30€</a> </li>
+                <li>    <a href="#">RÉPUBLIQUE - 26,60€</a> </li>
 
 
 
@@ -424,17 +424,17 @@
             <div class="single-pricing-table">
               <h3>TARIF HEBDOMADAIRE</h3>
                 <br>
-              <h5>À PARTIR 99,90€</h5>
+              <h5>À PARTIR 122,90€</h5>
 
 
 
               <ul class="package-list">
-                <li>   <a href="#" >MADELEINE - 140,90€</a> </li>
-                <li>  <a href="#">PLACE VENDÔME - 99,90€</a> </li>
-                <li>    <a href="#">BEAUGRENELLE- 110,90€</a> </li>
-                <li>    <a href="#">OPÉRA GARNIER - 105,99€</a> </li>
-                <li>    <a href="#">BERCY VILLAGE - 115,99€</a> </li>
-                <li>    <a href="#">PORTE DE VERSAILLES - 125,90€</a> </li>
+                <li>   <a href="#" >MADELEINE - 140,00€</a> </li>
+                <li>  <a href="#">PLACE VENDÔME - 143,90€</a> </li>
+                <li>    <a href="#">BEAUGRENELLE- 135,10€</a> </li>
+                <li>    <a href="#">OPÉRA GARNIER - 138,50</a> </li>
+                <li>    <a href="#">BERCY VILLAGE - 131,40€</a> </li>
+                <li>    <a href="#">PORTE DE VERSAILLES - 128,90€</a> </li>
 
               </ul>
             </div>
