site version finale

--- a/website-version-ok.html
+++ b/website-version-ok.html
@@ -229,7 +229,7 @@
             <div class="section-title  text-center">
               <h2>Choisissez votre place de parking</h2>
               <span class="title-line"><i class="fa fa-car"></i></span>
-              <p>Une place de parking, simplement.</p>
+              <p id= "placedeparking" > Une place de parking, simplement.</p>
             </div>
           </div>
           <!-- Section Title End -->
@@ -245,10 +245,7 @@
                   <div class="home2-car-filter">
                     <a href="#" data-filter="*" class="active">Tous</a>
                     <a href="#" data-filter=".con">Parking extérieur</a>
-                    <a href="#" data-filter=".hat">Parking soutérrain</a>
-                    <a href="#" data-filter=".mpv">Parking aérien</a>
-                    <a href="#" data-filter=".sedan">Aéroports</a>
-                    <a href="#" data-filter=".suv">Gares</a>
+                    <a href="#" data-filter=".hat">Parking souterrain</a>
                   </div>
                   <!-- Choose Filtering Menu End -->
                 </div>
@@ -257,7 +254,7 @@
                   <!-- Choose Cars Content-wrap -->
                   <div class="row popular-car-gird">
 
-                    <!-- Single Popular Car Start -->
+                    <!-- Parking extérieur 1 -->
                     <div class="col-lg-6 col-md-6 con suv mpv">
                       <div class="single-popular-car">
                         <div class="p-car-thumbnails">
@@ -269,10 +266,10 @@
                         <div class="p-car-content">
                           <h3>
                             <a href="#">Parking extérieur</a>
-                            <span class="price"><i class="fa fa-tag"></i> 3,80€/heure</span>
+                            <span class="price"><i class="fa fa-tag"></i> 2,40€/heure</span>
                           </h3>
 
-                          <h5>Châtelet - Les Halles</h5>
+                          <h5>Boulogne-Bllancourt</h5>
 
                           <div class="p-car-feature">
                             <a href="#">Parking sécurisé</a>
@@ -282,9 +279,39 @@
                         </div>
                       </div>
                     </div>
-                    <!-- Single Popular Car End -->
 
-                    <!-- Single Popular Car Start -->
+
+                    <!-- Parking extérieur 1 fin -->
+
+                    <!-- Parking extérieur 2 -->
+                    <div class="col-lg-6 col-md-6 suv con mpv">
+                      <div class="single-popular-car">
+                        <div class="p-car-thumbnails">
+                          <a class="car-hover" href="assets/img/car/car-3.jpg">
+                            <img src="assets/img/car/car-3.jpg" alt="JSOFT">
+                          </a>
+                        </div>
+
+                        <div class="p-car-content">
+                          <h3>
+                            <a href="#">Parking extérieur</a>
+                            <span class="price"><i class="fa fa-tag"></i> 2,30€/heure</span>
+                          </h3>
+
+                          <h5>Vincennes</h5>
+
+                          <div class="p-car-feature">
+                            <a href="#">Parking sécurisé</a>
+                            <a href="#">Disponible 24/7</a>
+
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <!-- Parking extérieur 2 fin -->
+
+
+                    <!-- Parking sousterrain 1 -->
                     <div class="col-lg-6 col-md-6 hat sedan">
                       <div class="single-popular-car">
                         <div class="p-car-thumbnails">
@@ -295,8 +322,8 @@
 
                         <div class="p-car-content">
                           <h3>
-                            <a href="#">Parking sous terrain</a>
-                            <span class="price"><i class="fa fa-tag"></i> 3,60€/heure</span>
+                            <a href="#">Parking souterrain</a>
+                            <span class="price"><i class="fa fa-tag"></i> 3,20€/heure</span>
                           </h3>
 
                           <h5>Champs élysées</h5>
@@ -309,34 +336,10 @@
                         </div>
                       </div>
                     </div>
-                    <!-- Single Popular Car End -->
+                    <!-- Parking sousterrain 1 fin-->
 
-                    <!-- Single Popular Car Start -->
-                    <div class="col-lg-6 col-md-6 suv con mpv">
-                      <div class="single-popular-car">
-                        <div class="p-car-thumbnails">
-                          <a class="car-hover" href="assets/img/car/car-3.jpg">
-                            <img src="assets/img/car/car-3.jpg" alt="JSOFT">
-                          </a>
-                        </div>
 
-                        <div class="p-car-content">
-                          <h3>
-                            <a href="#">Parking aerien</a>
-                            <span class="price"><i class="fa fa-tag"></i> 2,90€/heure</span>
-                          </h3>
 
-                          <h5>Bastille</h5>
-
-                          <div class="p-car-feature">
-                            <a href="#">Parking sécurisé</a>
-                            <a href="#">Disponible 24/7</a>
-
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <!-- Single Popular Car End -->
 
 
                   </div>
@@ -467,7 +470,7 @@
             <div class="display-table">
               <div class="display-table-cell">
                 <div class="about-content">
-                  <p id="explications">SharePark, c’est plus de 30 000 places disponibles partout en France. Nous proposons des locations de parking dans plus de 300 communes. Paris, Marseille, Lyon, ... pas une ne manque à l’appel ! Et le réseau de parkings SharePark ne cesse de grandir. Parce que nous sommes les leaders de la location de parking, nous ouvrons un nouveau parking chaque jour ! Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus proche de votre domicile. Où que vous habitiez, nous parions que vous trouverez un garage à louer à moins de 5 minutes de chez vous. Alors, faites le test ! </p>
+                  <p id="explications">SharePark, c’est plus de 30 000 places disponibles partout en France. Nous proposons des locations de parkings dans plus de 300 communes. Paris, Marseille, Lyon, ... pas une ne manque à l’appel ! Et le réseau de parkings SharePark ne cesse de grandir. Nos parkings sont situés sous des immeubles résidentiels partenaires, au plus proche de votre domicile. Où que vous habitiez, nous parions que vous trouverez un garage à louer à moins de 5 minutes de chez vous. Alors, faites le test ! </p>
                 </div>
               </div>
             </div>
